--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,9 @@
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+.nowrap{
+    white-space: nowrap;
+}
  .h-screen{
  	height: 100vh;
  }
