--- a/public/css/ticket.css
+++ b/public/css/ticket.css
@@ -1,6 +1,6 @@
 * {
-    font-size: 10px;
-    font-family: 'Times New Roman';
+    font-size: 12px;
+    font-family: 'Arial, sans-serif;';
 }
 .raya{
     border-top: 1px dashed black;
@@ -33,8 +33,8 @@ th.precio {
 }
 
 .ticket {
-    width: 155px;
-    max-width: 155px;
+    width: 160px;
+    max-width: 165px;
 }
 
 img {
